Advanced search: Fix checkbox / label alignment on multi choices criteria

--- a/css/backoffice/components/_search-form.scss
+++ b/css/backoffice/components/_search-form.scss
@@ -380,7 +380,7 @@ $ibo-search-results-area--datatable-scrollhead--border--is-sticking: $ibo-search
 
 						.sfc_opc_multichoices {
 							label > input {
-								vertical-align: middle;
+								vertical-align: text-top;
 								margin-left: 0px;
 								margin-right: 8px;
 							}
